# cpp_template

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  ConanPresets.json  Dev.md  MODULE.bazel  Makefile  README.md  compile_commands.json  conanfile.py  conanfile.txt  profile
app/: CMakeLists.txt  main.cpp
cmake/: ProjectOptions.cmake
conan/profiles/: debug  release
include/cpp_sample/: logger.hpp
include/cpp_template/: logger.hpp
src/: BUILD  CMakeLists.txt  calc.cpp  logger.cpp  main.cc  main.cpp
src/lib/: calc.cpp  calc.hpp  logger.cpp  logger.hpp
tests/: CMakeLists.txt  test_calc.cpp
