"""Build rules for the src package."""
module(name = "cpp_sample", version = "0.1")

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "quill", version = "9.0.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.7")


bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

bazel_dep(name = "boost", version = "1.89.0")
archive_override(
    module_name = "boost",
    strip_prefix = "boost-1.89.0",
    sha256 = "aa25e7b9c227c21abb8a681efd4fe6e54823815ffc12394c9339de998eb503fb",
    urls = ["https://github.com/boostorg/boost/releases/download/boost-1.89.0/boost-1.89.0-b2-nodocs.tar.gz"],
    patch_cmds = [
        """echo 'module(name = "boost", version = "1.89.0")' > MODULE.bazel""",
        """echo 'package(default_visibility = ["//visibility:public"])

cc_library(
    name = "system",
    hdrs = glob([
        "boost/system/*.hpp",
        "boost/system/**/*.hpp",
    ]),
    includes = ["."],
)
' > BUILD.bazel""",
    ],
)

bazel_dep(name = "simdjson", version = "4.0.7")
archive_override(
    module_name = "simdjson",
    sha256 = "076ee3bf715555357581d86c87a7dd4dd58a6a7f9955f256a1f0d13b4de62c4e",
    urls = ["https://github.com/simdjson/simdjson/releases/download/v4.0.7/singleheader.zip"],
    patch_cmds = [
        """echo 'module(name = "simdjson", version = "4.0.7")' > MODULE.bazel""",
        """echo 'package(default_visibility = ["//visibility:public"])

cc_library(
    name = "simdjson",
    srcs = ["simdjson.cpp"],
    hdrs = ["simdjson.h"],
    includes = ["."],
)
' > BUILD.bazel""",
    ],
)
